--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>bicipalma</name>
-  <url>http://www.example.com</url>
+  <url>https://github.com/Aminmboankod/BiciPalma.git</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
